Added picknplace.py and changes according to the pick and palce task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ install(PROGRAMS
     ${EXAMPLES_DIR}/ex_joint_goal.py
     ${EXAMPLES_DIR}/ex_pose_goal.py
     ${EXAMPLES_DIR}/ex_servo.py
+    ${EXAMPLES_DIR}/move_to_centroid.py
+    ${EXAMPLES_DIR}/picknplace.py
     DESTINATION lib/${PROJECT_NAME}
 )
 
